Fix wrong color in mobile menu
This should fix issue #1319.

--- a/static/themes/default/css/plinth.css
+++ b/static/themes/default/css/plinth.css
@@ -267,6 +267,11 @@ footer license-info p {
 .main-header .navbar-nav>li>a .nav-icon {
     margin-right: 0px;
 }
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #FFF;
+}
+
 /* applying styles to header - end */
 
 .card-list {
