--- a/static/themes/default/css/responsive.css
+++ b/static/themes/default/css/responsive.css
@@ -6,4 +6,10 @@
     footer{
         position: relative;
     }
+
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a,
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
+        color: #FFF;
+    }
+
 }
